  - DJVU plugin: fix opening files with non-latin chars in filename.
  - PDF plugin: freetype library updated to version 2.3.5.
  - TAB key switch between navigation pane and document (closed
    tickets #112, #123).
  - Zoom in/Zoom out menuitems and corresponding Ctrl++/Ctrl+- hotkeys.
  - Ctrl+Shift++/Ctrl+Shift+- hotkeys for rotate CW/CCW, Ctrl+P for Print
    (closed ticket #108).
  - Updated NLS-files: Czech, French, Dutch.

1.0:
  - Show message with missed modulename if Lucide.dll cannot be loaded.
  - PDF plugin: freetype library updated to release 2.3.1.
  - Minor fixes.
  - Updated NLS-files: German, French, Swedish, Danish.

1.0 RC1:
  - Ask for password, if document password-protected.
  - Pipe commands, see readme for details.
  - 'New window' menuitem.
  - Writes into EA thumbnail of first page of document (for eSchemes Deluxe).
  - Added 'print to file' option for postscript output.
  - Remember last selected printer during session (closed ticket #96).
  - Copy unicode text to clipboard in OpenOffice.org compatible format.
  - Optimized unicode conversion, fixed crash in uconv.dll (closed ticket #97).
  - Speedup for 'As Image' printing, fixed crash (closed ticket #94).
  - Odd/Even printing for 'As Image' printing.
  - Plugin API extension: extended error reporting.
  - PDF plugin: freetype library updated to release 2.3.0 (closed ticket #76).
  - DJVU plugin: handle document load errors.
  - Added NLS-files: Italian, Czech, Russian.
  - Updated NLS-files: Spanish, German, French.

Beta-4:
  - Added 'Zoom In/Out' button to zoom in/out with mouse click/ctrl+click.
  - Replace ligatures when converting text from unicode to system 
    codepage (closed ticket #45).
  - Poppler (pdf rendering) library updated to version 0.5.4.
  - Lucide's internationalization now respects 'territory' modifier.
  - Fixed crash on PDF load during fonts enumeration on font files which
    FreeType doesn't understand (closed ticket #83).